tests/parser/bad/lib/lmodule-library-cid-let-id-with.scillib
scilla_version 0

library TestLib

(* equals should be '=' *)
let a equals True
